--- a/index.html
+++ b/index.html
@@ -1,37 +1,58 @@
 <!DOCTYPE html>
 <html lang='en'>
   <head>
-    <title>Word Study Help</title>
+    <title>Countries of the World</title>
     <meta charset='utf-8'>
-    <meta name='description' content='Country Study Help'>
+    <meta name='description' content='Countries of the World Study Help'>
     <meta name='keywords' content='Search info about a country, or a do a quiz to memory flags, countries and capitals'>
     <meta name='author' content='Giovanni Pellicciotta'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <meta name='theme-color' content='#0e6eb8'>
     <link rel='manifest' href='./manifest.json'>
-    <link rel='shortcut icon' href='./img/worl-map.ico'>
+    <link rel='shortcut icon' href='./img/world-map.ico'>
     <link type='text/css' rel='preload' as='style' onload='this.rel="stylesheet"' href='https://fonts.googleapis.com/css?family=Roboto&display=swap'>
     <link href='./style.css' rel='stylesheet'>
     <base href='/'> <!-- For testing in VS Code -->
-    <script src='https://kit.fontawesome.com/1c60ca333d.js' crossorigin='anonymous' defer></script>
+    <script src="https://kit.fontawesome.com/1c60ca333d.js" crossorigin="anonymous"></script>
     <script type='module' src='./world-utils.mjs' defer></script>
   </head>
   <body>
     <section id='search'>
-      <p>What country would you like to multisearch? Type below, then press enter please.</p>
+      <p id="title">What country would you like to multisearch? Type below, then press enter please.</p>
       <input type='text' id='country-box' autofocus>
+    </section>  
+    
+    <section id="buttons">
+      <button id='random-country'><i class="fa-regular fa-dice"></i> Country</button>
+      <button id='random-capital'><i class="fa-regular fa-dice"></i> Capital</button>
+      <button id='random-flag'><i class="fa-regular fa-dice"></i> Flag</button>
     </section>
+
     <section id='results'>
-      <h1><span id='country'>{{COUNTRY}}</span></h1>
-      <p id='flag'>
-        <img src="/img/flags/4x3/{{COUNTRY-CODE}}.svg" alt='Flag of {{COUNTRY}}'>
-      </p>
-      <p id='capital'>
-        {{Capital}} 
-      </p>
-      <p id='wikipedia'>
-        <a href='#' target='Wikipedia'>Wikipedia</a>
-      </p>      
+      <div class="country-panel">
+        <img id='flag' src="/img/flags/4x3/{{COUNTRY-CODE}}.svg" alt='Flag of {{COUNTRY}}'>
+
+        <h1 class="country-info" id="english_country_info">
+          <img class="language" src="/img/flags/1x1/gb-eng.svg"> 
+          <a id='english_wikipedia' href='#' target='Wikipedia'>
+            <span class="country" id='english_country_name'>{{Country}}</span></a>
+            <p class="capital" id='english_capital_name'>{{Capital}}</p>
+        </h1>
+        
+        <h1 class="country-info" id="dutch_country_info">
+          <img class="language" src="/img/flags/1x1/nl.svg"> 
+          <a id='dutch_wikipedia' href='#' target='Wikipedia'>
+            <span class="country" id='dutch_country_name'>{{Land}}</span></a>
+            <p class="capital" id='dutch_capital_name'>{{Hoofdstad}}</p>
+        </h1>
+
+        <h1 class="country-info" id="italian_country_info">
+          <img class="language" src="/img/flags/1x1/it.svg"> 
+          <a id='italian_wikipedia' href='#' target='Wikipedia'>
+            <span class="country" id='italian_country_name'>{{Paese}}</span></a>
+            <p class="capital" id='italian_capital_name'>{{Capitale}}</p>
+        </h1>   
+      </div>
     </section>
   </body>
 </html>
