Better intro-phrase

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <section id='search'>
-      <p id="title">What country would you like to multisearch? Type below, then press enter please.</p>
+      <p id="title">What country would you like to show? Type + enter.</p>
       <input type='text' id='country-box' autofocus>
     </section>  
     
