Improved UI: search and random-pick are now all in the search area, while the quiz area is reserved for the quiz UI elements

--- a/index.html
+++ b/index.html
@@ -19,15 +19,16 @@
     <section id='search'>
       <p id="title">What country would you like to show? Type + enter.</p>
       <input type='text' id='country-box' autofocus>
+      <button id='search-country'><i class="fa-solid fa-magnifying-glass"></i> Search</button>
+      <span class="separator">|</span>
+      <button id='random-country'><i class="fa-solid fa-dice"></i> Country</button>
     </section>  
     
     <section id="buttons">
       <!-- Initial mode: -->
       <button id='quiz-country'><i class="fa-regular fa-circle-question"></i> Country Name</button>
       <button id='quiz-capital'><i class="fa-regular fa-circle-question"></i> Capital Name</button>
-      <button id='quiz-flag'><i class="fa-regular fa-circle-question"></i> Country Flag</button>
-      <span class="separator">|</span>
-      <button id='random-country'><i class="fa-solid fa-dice"></i> Country</button>
+      <button id='quiz-flag'><i class="fa-regular fa-circle-question"></i> Country Flag</button>      
       <!-- Quiz mode: -->
       <span id="quiz-type">Guess the ...</span>
       <button id='show-answer'><i class="fa-regular fa-eye"></i> Show Answer</button>
