Adding datalist for search input. Improve UI with feedback section sticky at bottom of screen.

--- a/index.html
+++ b/index.html
@@ -18,27 +18,25 @@
   <body>
     <section id='search'>
       <p id="title">What country would you like to show? Type + enter.</p>
-      <input type='text' id='country-box' autofocus>
+      <input type='text' id='country-box' autofocus list="name-list">
+      <datalist id="name-list"></datalist>
       <button id='search-country'><i class="fa-solid fa-magnifying-glass"></i> Search</button>
       <span class="separator">|</span>
       <button id='random-country'><i class="fa-solid fa-dice"></i> Country</button>
     </section>  
     
-    <section id="buttons">
+    <section id="quiz">
       <!-- Initial mode: -->
       <button id='quiz-country'><i class="fa-regular fa-circle-question"></i> Country Name</button>
       <button id='quiz-capital'><i class="fa-regular fa-circle-question"></i> Capital Name</button>
       <button id='quiz-flag'><i class="fa-regular fa-circle-question"></i> Country Flag</button>      
       <!-- Quiz mode: -->
-      <span id="quiz-type">Guess the ...</span>
-      <button id='show-answer'><i class="fa-regular fa-eye"></i> Show Answer</button>
-      <button id='good-answer'><i class="fa-regular fa-thumbs-up"></i> Good Answer</button>
-      <button id='bad-answer'><i class="fa-regular fa-thumbs-down"></i> Bad Answer</button>      
+      <span id="quiz-type">Guess the ...</span>    
     </section>
 
     <section id='results' class="hide-flag">
       <div class="country-panel">        
-        <img id='flag' class="flag" src="/img/flags/4x3/__.svg" alt='Flag of {{COUNTRY}}'>
+        <img id='flag' class="flag" src="/img/flags/4x3/no-country.svg" alt='Flag of {{COUNTRY}}'>
 
         <h1 class="country-info" id="english_country_info">
           <img class="language" src="/img/flags/1x1/gb-eng.svg"> 
@@ -62,5 +60,11 @@
         </h1>   
       </div>
     </section>
+
+    <section id="feedback">
+      <button id='show-answer'><i class="fa-regular fa-eye"></i> Show Answer</button>
+      <button id='good-answer'><i class="fa-regular fa-thumbs-up"></i> Good Answer</button>
+      <button id='bad-answer'><i class="fa-regular fa-thumbs-down"></i> Bad Answer</button>      
+    </section>    
   </body>
 </html>
