No-country no has code 'xx'

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <section id='results' class="hide-flag">
       <div class="country-panel">        
-        <img id='flag' class="flag" src="/img/flags/4x3/no-country.svg" alt='Flag of {{COUNTRY}}'>
+        <img id='flag' class="flag" src="/img/flags/4x3/xx.svg" alt='Flag of {{COUNTRY}}'>
 
         <h1 class="country-info" id="english_country_info">
           <img class="language" src="/img/flags/1x1/gb-eng.svg"> 
