--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link type='text/css' rel='preload' as='style' onload='this.rel="stylesheet"' href='https://fonts.googleapis.com/css?family=Roboto&display=swap'>
     <link href='./style.css' rel='stylesheet'>
     <script src="https://kit.fontawesome.com/1c60ca333d.js" crossorigin="anonymous"></script>
-    <script type='module' src='./world-utils.mjs' defer></script>
+    <script type='module' src='./js/world-utils.mjs' defer></script>
   </head>
   <body>
     <section id='search'>
