--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   </head>
   <body>
     <section id='search'>
-      <input type='text' id='country-box' autofocus list="name-list">
-      <datalist id="name-list"></datalist>
+      <input type='text' id='country-box' autofocus list="search-list">
+      <datalist id="search-list"></datalist>
       <button id='random-country'><i class="fa-solid fa-dice"></i><label>Pick Any</label></button>
     </section>  
 
